wubi (8.10) UNRELEASED; urgency=low

  [ Agostino Russo ]
  * Initial revision
  * Hello world, we have a window showing
  * Fixed loop on quit
  * Fixed tools
  * Added logging support
  * Reorganized commandline arguments
  * Improved progress object
  * Added data dir
  * Added win32 wizard base page class
  * Added mappings
  * Initial win32 page layout
  * Using basic window as panel
  * Refactored shared_backend.py into common/backend.py & friends
  * Added metalink parser
  * Removed testing metalink code
  * Added progress page
  * Improved quit mechanism
  * Added tasklist as a more general replacement of the progress object
  * Revised tool scripts

  [ Hampus Wessman ]
  * Added a new metalink parser
  * Fixed the check for wine so that it looks in additonal places
  * Added tools/wine to the branch

  [ Agostino Russo ]
  * Added windows system info detection
  * Added installation page (partially implemented)
  * Minor GUI layout changes
  * Added installation finish page
  * Modified code to support Python 2.3 (for licensing and size reasons)
  * Added bittornado source importer
  * Added ipython setup
  * Added data dir to the build via pyinstaller
  * Added pylauncher
  * Factored out helper functions
  * Added isolist parsing and prcessing
  * Added dependency tracking from pyinstaller
  * Added cx_freeze support
  * Added new installation tasks
  * Added menu.lst generation
  * Added winboot dir (pre-compiled)
  * Copy custom-installation files to targetdir
  * Detect previous backup dir
  * Added BitTornado and urlgrabber sources

 -- Agostino Russo <agostino.russo@gmail.com>  Tue, 16 Sep 2008 00:37:38 +0100