@@ -4,8 +4,11 @@ from backends.common.helpers import get_md5
 from backends.common.mappings import reserved_usernames
 import os
 import logging
+import sys
 import re
 log = logging.getLogger("WinuiInstallationPage")
+if sys.version.startswith('2.3'):
+    from sets import Set as set
 
 reserved_usernames = [unicode(n) for n in reserved_usernames]
 re_first_char_is_letter = re.compile("^[a-zA-Z_]")
@@ -56,35 +59,69 @@ class InstallationPage(Page):
         h=24
         w=150
 
+        #Check disk space
+        if self.application.info.skipsizecheck:
+            drives = [
+                d for d in self.application.info.drives
+                if d.type in ['removable', 'hd']
+                and d.free_space_mb > 2500]
+            if not drives:
+                self.application.show_error_message("Not enough disk space, 2.5GB minimum are required")
+                self.application.cancel()
+        else:
+            drives = [
+                d for d in self.application.info.drives
+                if d.type in ['removable', 'hd']
+                and d.free_space_mb > 4000]
+            if not drives:
+                self.application.show_error_message("Not enough disk space, 4GB minimum are required")
+                self.application.cancel()
+
+        #Populate dialog
         listitems = [
             "%s (%sGB free)" % (drive.path, int(drive.free_space_mb/1024))
-            for drive in self.application.info.drives]
+            for drive in drives]
         picture, label, self.targetdrive_list = self.add_controls_block(
             self.main, h, h,
             "install.bmp", "Installation drive:", listitems)
 
-        listitems = ["4GB", "6GB", "8GB"]
+        targetdrive = self.targetdrive_list.get_text()[:2]
+        targetdrive = [d for d in self.application.info.drives if d.path == targetdrive]
+        freespace = min(30, int(targetdrive[0].free_space_mb / 1024))
+        listitems =  ["%sGB" % x for x in range(4, freespace)]
         picture, label, self.size_list = self.add_controls_block(
-            self.main, h, h*4,
-            "systemsize.bmp", "Installation size:", listitems)
+                self.main, h, h*4,
+                "systemsize.bmp", "Installation size:",
+                listitems)
+        self.size_list.set_value(listitems[max(0,len(listitems)-2)])
 
-        listitems = ["Ubuntu", "Kubuntu", "Xubuntu"]
+        if self.application.info.cd_distro:
+            distros = [self.application.info.cd_distro.name]
+        else:
+            distros = set([d.name for d in self.application.info.distros])
+            distros = list(distros)
+            distros.sort()
+            #TBD set a default distro and/or distro ordering
         picture, label, self.distro_list = self.add_controls_block(
             self.main, h, h*7,
-            "desktop.bmp", "Desktop environment:", listitems)
+            "desktop.bmp", "Desktop environment:", distros)
 
         listitems = self.application.info.languages
         picture, label, self.language_list = self.add_controls_block(
             self.main, h*4 + w, h,
             "language.bmp", "Language:", listitems)
+        self.language_list.set_value(self.application.info.windows_language)
 
+        username = self.application.info.windows_username.lower()
+        username = username.replace(' ', '_')
+        username = username.replace('_', '__')
         picture, label, combo = self.add_controls_block(
             self.main, h*4 + w, h*4,
             "user.bmp", "Username:", None)
         self.username = ui.Edit(
             self.main,
             h*4 + w + 42, h*4+20, 150, 20,
-            self.application.info.windows_username)
+            username)
 
         picture, label, combo = self.add_controls_block(
             self.main, h*4 + w, h*7,
@@ -146,7 +183,11 @@ class InstallationPage(Page):
 
         info.targetdrive = targetdrive
         info.installation_size = installation_size
-        info.distro = info.distros["%s-%s" % (distro_name, info.arch)]
+        for distro in info.distros:
+            if distro.name == distro_name \
+            and distro.arch == info.arch:
+                info.distro = distro
+                break
         info.language = language
         info.username = username
         info.password = get_md5(password1)
