@@ -146,6 +146,22 @@ class Wubi(object):
         parser.add_option("-u", "--uninstall", action="store_const", const="uninstall", dest="run_task", help="run the installer, if an existing installation is detected it will be uninstalled first")
         parser.add_option("-m", "--cdmenu", action="store_const", const="cdmenu", dest="run_task", help="run the CD menu selector")
         parser.add_option("-b", "--cdboot", action="store_const", const="cdoot", dest="run_task", help="install a CD boot helper program")
+
+        parser.add_option("--skipmd5check", action="store_true", dest="skipmd5check", help="Skip md5 checks")
+        parser.add_option("--skipsizecheck", action="store_true", dest="skipsizecheck", help="Skip disk size checks")
+        parser.add_option("--skipmemorycheck", action="store_true", dest="skipmemorycheck", help="Skip memory size checks")
+        parser.add_option("--noninteractive", action="store_true", dest="noninteractive", help="Non interactive mode")
+        parser.add_option("--drive", dest="target_drive", help="Target drive")
+        parser.add_option("--size", dest="installation_size", help="Installation size in GB")
+        parser.add_option("--locale", dest="locale", help="Linux locale")
+        parser.add_option("--language", dest="language", help="Language")
+        parser.add_option("--username", dest="username", help="Username")
+        parser.add_option("--password", dest="password", help="Password (md5)")
+        parser.add_option("--distro", dest="distro_name", help="Password (md5)")
+        parser.add_option("--accessibility", dest="accessibility", help="Password (md5)")
+        parser.add_option("--webproxy", dest="web_proxy", help="Web proxy")
+        parser.add_option("--isopath", dest="iso_path", help="Use specified ISO")
+
         parser.add_option("--log-file", dest="log_file", default=None, help="use the specified log file, if omitted a log is created in your temp directory, if the value is set to 'none' no log is created")
         parser.add_option("--interface", dest="use_frontend", default=None, help="use the specified user interface, ['win32']")
         parser.add_option("--uninstall_dir", dest="uninstall_dir", default=None, help="uninstall the specified directory")
